[metadata]
author = Verizon Media Python Platform Team
author_email = python@verizonmedia.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
description = Python helper utilities for screwdriver CI/CD
keywords = ci, cd, screwdriver
long_description = file:README.md
long_description_content_type = text/markdown
name = screwdrivercd
project_urls = 
	CI Pipeline = https://cd.screwdriver.cd/pipelines/3063
	Documentation = https://yahoo.github.io/python-screwdrivercd/
	Source = https://github.com/yahoo/python-screwdrivercd
url = https://github.com/yahoo/python-screwdrivercd
version = 0.1.0

[options]
namespace_packages = 
	screwdrivercd
packages =
	screwdrivercd.changelog
	screwdrivercd.documentation
	screwdrivercd.documentation.mkdocs
	screwdrivercd.documentation.sphinx
	screwdrivercd.installdeps
	screwdrivercd.installdeps.installers
	screwdrivercd.packaging
	screwdrivercd.repo
	screwdrivercd.screwdriver
	screwdrivercd.screwdriver.templates
	screwdrivercd.utility
	screwdrivercd.validation
	screwdrivercd.version
package_dir = 
	=src
install_requires = 
	distro
	lxml
	mkdocs
	mypy
	parsley
	pycodestyle>=2.3.1
	pypirun
	pyroma
	requests
	safety
	setuptools>39.0.0
	sphinx!=1.8.0
	termcolor
	toml
	twine
	wheel
python_requires = >="3.6"
zip_safe = True

[options.entry_points]
console_scripts =
	screwdrivercd_changelog=screwdrivercd.changelog.generate:main
	screwdrivercd_documentation=screwdrivercd.documentation.cli:main
	screwdrivercd_install_deps=screwdrivercd.installdeps.cli:main
	screwdrivercd_ssh_setup=screwdrivercd.screwdriver.github_deploykey:setup_ssh_main
	screwdrivercd_github_deploykey=screwdrivercd.screwdriver.github_deploykey:add_deploykey_main
	screwdrivercd_package_python=screwdrivercd.packaging.build_package:main
	screwdrivercd_version=screwdrivercd.version.cli:main
	screwdrivercd_validate_deps=screwdrivercd.validation.validate_dependencies:main
	screwdrivercd_validate_package_quality=screwdrivercd.validation.validate_package_quality:main
	screwdrivercd_validate_style=screwdrivercd.validation.validate_style:main
	screwdrivercd_validate_type=screwdrivercd.validation.validate_type:main

screwdrivercd.documentation.plugin =
	base   = screwdrivercd.documentation.plugin:DocumentationPlugin
	mkdocs = screwdrivercd.documentation.mkdocs.plugin:MkDocsDocumentationPlugin
	sphinx = screwdrivercd.documentation.sphinx.plugin:SphinxDocumentationPlugin

[options.extras_require]
documentation = 
	dhubbard-sphinx-markdown-tables
	guzzle_sphinx_theme
	markdown-include
	mkdocs-bootstrap4
	mkdocs-cinder
	mkdocs-material
	nbsphinx
	pygments
	pymdown-extensions
	recommonmark
	sphinx_rtd_theme
doc_build = 
	dhubbard-sphinx-markdown-tables
	guzzle_sphinx_theme
	markdown-include
	mkdocs-bootstrap4
	mkdocs-material
	nbsphinx
	pygments
	pymdown-extensions
	recommonmark
	sphinx_rtd_theme
test = 
	pytest
	pytest-cov
	pypirun

[screwdrivercd.version]
version_type = sdv4_SD_BUILD

