[metadata]
author = Yahoo Python Platform Team
author_email = python@yahooinc.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
description = Python helper utilities for screwdriver CI/CD
keywords = ci, cd, screwdriver
long_description = file:README.md
long_description_content_type = text/markdown
name = screwdrivercd
project_urls = 
	Documentation = https://yahoo.github.io/python-screwdrivercd/
	Source = https://github.com/yahoo/python-screwdrivercd
	Change Log = https://yahoo.github.io/python-screwdrivercd/changelog/
	CI Pipeline = https://cd.screwdriver.cd/pipelines/3063
url = https://github.com/yahoo/python-screwdrivercd
version = 2.2.0

[options]
packages =
	screwdrivercd.changelog
	screwdrivercd.documentation
	screwdrivercd.documentation.mkdocs
	screwdrivercd.documentation.sphinx
	screwdrivercd.installdeps
	screwdrivercd.installdeps.installers
	screwdrivercd.packaging
	screwdrivercd.repo
	screwdrivercd.screwdriver
	screwdrivercd.screwdriver.templates
	screwdrivercd.utility
	screwdrivercd.validation
	screwdrivercd.version
package_dir = 
	=src
install_requires = 
	distro
	lxml>=4.9.1
	mkdocs
	mypy
	packaging
	parsley
	pycodestyle>=2.3.1
	pypirun
	pyroma<=4.3.2
	requests
	sphinx!=1.8.0
	termcolor
	tomlkit
	twine
	wheel
python_requires = >=3.11
zip_safe = True

[options.entry_points]
console_scripts =
	screwdrivercd_changelog=screwdrivercd.changelog.generate:main
	screwdrivercd_documentation=screwdrivercd.documentation.cli:main
	screwdrivercd_install_deps=screwdrivercd.installdeps.cli:main
	screwdrivercd_ssh_setup=screwdrivercd.screwdriver.github_deploykey:setup_ssh_main
	screwdrivercd_github_deploykey=screwdrivercd.screwdriver.github_deploykey:add_deploykey_main
	screwdrivercd_package_python=screwdrivercd.packaging.python:main
	screwdrivercd_publish_python=screwdrivercd.packaging.publish_python:main
	screwdrivercd_release=screwdrivercd.repo.release:main
	screwdrivercd_version=screwdrivercd.version.cli:main
	screwdrivercd_validate_deps=screwdrivercd.validation.validate_dependencies:main
	screwdrivercd_validate_package_quality=screwdrivercd.validation.validate_package_quality:main
	screwdrivercd_validate_style=screwdrivercd.validation.validate_style:main
	screwdrivercd_validate_type=screwdrivercd.validation.validate_type:main
	screwdrivercd_validate_unittest=screwdrivercd.validation.validate_unittest:main

screwdrivercd.documentation.plugin =
	base   = screwdrivercd.documentation.plugin:DocumentationPlugin
	mkdocs = screwdrivercd.documentation.mkdocs.plugin:MkDocsDocumentationPlugin
	mkdocs_venv =  screwdrivercd.documentation.mkdocs.plugin:MkDocsDocumentationVenvPlugin
	sphinx = screwdrivercd.documentation.sphinx.plugin:SphinxDocumentationPlugin

[options.extras_require]
documentation =
	markdown
	pymdown-extensions
	markdown-include
	mkdocs-bootstrap4
	mkdocs-cinder
	mkdocs-material
	pygments
	recommonmark
doc_build =
	markdown
	pymdown-extensions
	markdown-include
	mkdocs-bootstrap4
	mkdocs-material
	pygments
	recommonmark
test =
	pytest
	pytest-cov
	pypirun
	vcrpy-unittest

[screwdrivercd.version]
version_type = sdv4_SD_BUILD

